tests/ui/consts/large_static_alloc.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/large_static_alloc.rs:5:13
   |
LL |     let x = [0_u8; (1 << 47) - 1];
   |             ^^^^^^^^^^^^^^^^^^^^^ tried to allocate more memory than available to compiler

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
